Changed header and fixed menu on small screens

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -10,51 +10,83 @@
     --third-darkest: #0077b6;
     --second-darkest: #023e8a;
     --darkest: #03045e;
+
+    box-sizing: border-box;
 }
 
 body {
     background-color: var(--second-darkest);
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
     justify-content: flex-start;
+    min-height: 100vh;
 }
 
 /* Hero section */
-.header {
+header {
     padding: 20px;
     font-size: 3.5rem;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: var(--second-lightest);
 }
 
-.header h1 {
+header h1 {
     display: inline;
     font-size: 48px;
 }
 
 /* Navigation menu */
-.header nav {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
-    display: inline-flexbox;
+    flex-direction: column;
+    flex-wrap: wrap-reverse;
 }
 
-.header nav ul {
+header nav ul {
     list-style-type: none;
 }
 
-.header nav ul li {
+header nav ul li {
     display: inline-flex;
     margin-left: 25px;
+}
+
+@media only screen and (max-width:850px) {
+    header h1 {
+        display: block;
+        float: none;
+        padding: 0;
+    }
+
+    header nav {
+        background-color: var(--medium-dark);
+        display: block;
+        text-align: center;
+        width: 100%;
+        margin-right: 0px;
+    }
+
+    header nav ul {
+        padding: 0;
+    }
+
+    header nav ul li {
+        margin-left: 0px;
+        display: block;
+        text-align: center;
+        padding: 0;
+    }
+
 }
 
 .menu-item {
     color: var(--second-lightest);
     text-decoration: none;
+    text-align: center;
 }
 
 .hero {
